[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/scenes/Extract Tempo.gd" type="Script" id=1]

[node name="Extract Tempo" type="WindowDialog"]
visible = true
margin_left = 890.899
margin_top = 456.14
margin_right = 1065.9
margin_bottom = 651.14
window_title = "Extract Tempo"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom Buttons" type="Control" parent="."]
anchor_left = 0.017
anchor_top = 0.867
anchor_right = 0.988
anchor_bottom = 0.977
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button Container" type="HBoxContainer" parent="Bottom Buttons"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel Button" type="Button" parent="Bottom Buttons/Button Container"]
margin_right = 82.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Accept Button" type="Button" parent="Bottom Buttons/Button Container"]
margin_left = 86.0
margin_right = 169.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Apply"

[node name="Main UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 0.837
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Main UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Main UI/AspectRatioContainer"]
margin_left = 5.00052
margin_right = 170.001
margin_bottom = 163.215
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Main UI/AspectRatioContainer/CenterContainer"]
margin_top = 51.0
margin_right = 165.0
margin_bottom = 111.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer"]
margin_right = 165.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Beats Label" type="Label" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 40.0
margin_bottom = 19.0
text = "Beats:"

[node name="LineEdit" type="LineEdit" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 102.0
margin_bottom = 24.0
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tempo Label" type="Label" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 165.0
margin_bottom = 42.0
text = "Tempo: 256 BPM"

[node name="Snapping Offset Label" type="Label" parent="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 165.0
margin_bottom = 60.0
text = "Snapping Offset: -23.0 ms"

[connection signal="pressed" from="Bottom Buttons/Button Container/Cancel Button" to="." method="_on_Cancel_Button_pressed"]
[connection signal="pressed" from="Bottom Buttons/Button Container/Accept Button" to="." method="_on_Accept_Button_pressed"]
[connection signal="text_changed" from="Main UI/AspectRatioContainer/CenterContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
